--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^10.3.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.3.0",
     "kafkajs": "^2.2.4",
+    "llamaindex": "^0.1.19",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
