--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
+TZ=Asia/Hong_Kong
+
+DB_HOST="localhost"
+DB_PORT=5432
+DB_USERNAME="searcher"
+DB_PASSWORD="searcher"
+DB_DATABASE="searcher"
+
 LLM_MODEL='yi:34b-chat-q4_K_M'
