--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,17 @@ services:
       file: ./docker/docker-compose-pgvector.yml
       service: pgvector
 
+  qdrant:
+    extends:
+      file: ./docker/docker-compose-qdrant.yml
+      service: qdrant
+
+configs:
+  qdrant_config:
+    content: |
+      log_level: INFO
+
 volumes:
   kafka_data:
   pgvector_data:
+  qdrant_data:
