Revert "remove pgvector"
This reverts commit 4ab205387acea79d8a212d2ad7c1ec6b5b1a83a9.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,11 @@ services:
       file: ./docker/docker-compose-kafka.yml
       service: kafka-ui
 
+  pgvector:
+    extends:
+      file: ./docker/docker-compose-pgvector.yml
+      service: pgvector
+
   qdrant:
     extends:
       file: ./docker/docker-compose-qdrant.yml
