change to pgvector but meet client not found

--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 TZ=Asia/Hong_Kong
 
-DB_HOST="localhost"
-DB_PORT=5432
-DB_USERNAME="searcher"
-DB_PASSWORD="searcher"
-DB_DATABASE="searcher"
+LLM_MODEL='llama2'
 
-LLM_MODEL='yi:34b-chat-q4_K_M'
+PGHOST="localhost"
+PGPORT="5432"
+PGUSER="searcher"
+PGPASSWORD="searcher"
+PGDATABASE="searcher"
 
-VECTOR_STORE_URL="http://localhost:6333"
+VECTOR_STORE_CONNECTION_STRING="postgresql://searcher:searcher@localhost:5432/searcher"
